# pulseroute

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
bench/: README.md  bench.py  cache_fill_curve.py  regress.py
bench/results/: 20260505_233220Z.json  20260506_000439Z.json  baseline_1k.json  cache_fill_curve.json  run_10k_20260507T211654Z.json
eval/baselines/: README.md  golden_v1_fake.json  pareto.md
eval/rubrics/: canary_quality.md
eval/suites/golden_v1/: math.yaml
infra/: prometheus.yml
infra/clickhouse/: 0001_request_log.sql  0002_canary_results.sql
infra/dashboards/: pulseroute-overview.json  pulseroute-providers.json  pulseroute-router.json
scripts/: bench.sh  bench_asgi.py  clickhouse_migrate.py  gen_pareto_md.py  sample_gsm8k.py  seed.py
services/eval-runner/: Dockerfile
services/eval-runner/pulseroute_eval/: __init__.py  bench.py  canary.py  cli.py  runner.py  scoring.py  suites.py
services/gateway/: Dockerfile  alembic.ini
services/gateway/app/: __init__.py  auth.py  deps.py  main.py  metrics.py  streaming.py  tenant.py
services/gateway/app/routes/: admin.py  chat.py
services/gateway/migrations/: env.py
services/gateway/migrations/versions/: 0001_init.py
tests/: conftest.py
tests/chaos/: test_sse_disconnect.py
tests/integration/: test_canary_clickhouse.py  test_distributed_breaker.py
tests/unit/: test_bench.py  test_breaker.py  test_cache.py  test_canary.py  test_cost.py  test_eval_bench.py  test_eval_runner.py  test_eval_suite.py  test_failover.py  test_gateway_routes.py  test_hdr.py  test_hdr_wired.py  test_policies.py  test_property_breaker.py  test_property_cache_normalize.py  test_property_routing.py  test_provider_http.py  test_redis_breaker.py  test_routing_policies.py  test_sample_gsm8k.py
