[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulseroute"
version = "0.1.0"
description = "OpenAI-compatible LLM gateway with policy-driven routing, semantic cache, and circuit breakers."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { file = "LICENSE" }
authors = [{ name = "Sai Asish Y" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "redis>=5.0",
    "click>=8.1",
    "structlog>=24.1",
    "prometheus-client>=0.20",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-httpx>=0.45b0",
    "tiktoken>=0.6",
    "tenacity>=8.2",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "respx>=0.21",
    "fakeredis[lua]>=2.20",
    "ruff>=0.4",
    "mypy>=1.9",
    "schemathesis>=3.27",
    "types-redis",
    "anyio>=4.3",
    "hypothesis>=6.100",
]

[project.scripts]
pulseroute-eval = "pulseroute_eval.cli:main"
pulseroute = "pulseroute_eval.cli:main"

[tool.setuptools]
packages = [
    "pulseroute_router",
    "pulseroute_router.providers",
    "pulseroute_policies",
    "pulseroute_cache",
    "pulseroute_shared",
    "pulseroute_client",
    "pulseroute_gateway",
    "pulseroute_gateway.routes",
    "pulseroute_eval",
]

[tool.setuptools.package-dir]
"pulseroute_router" = "packages/router/pulseroute_router"
"pulseroute_router.providers" = "packages/router/pulseroute_router/providers"
"pulseroute_policies" = "packages/policies/pulseroute_policies"
"pulseroute_cache" = "packages/cache/pulseroute_cache"
"pulseroute_shared" = "packages/shared/pulseroute_shared"
"pulseroute_client" = "packages/clients/python/pulseroute_client"
"pulseroute_gateway" = "services/gateway/app"
"pulseroute_gateway.routes" = "services/gateway/app/routes"
"pulseroute_eval" = "services/eval-runner/pulseroute_eval"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["services/gateway/migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W", "N", "C4", "SIM"]
ignore = ["E501", "B008", "UP042"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["C408"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pulseroute_router.*", "pulseroute_policies.*"]
strict = true
disallow_untyped_defs = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["packages/router/pulseroute_router", "packages/policies/pulseroute_policies"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
